@@ -18,7 +18,7 @@ class RedirectorUpdateProcessor extends modObjectUpdateProcessor {
         $context = $this->getProperty('context_key');
 
         // check if pattern is an existing resource
-        $criteria = array('uri' => $this->getProperty('pattern'));
+        $criteria = array('uri' => $this->getProperty('pattern'), 'published' => true, 'deleted' => false);
         if(!empty($context)) { $criteria['context_key'] = $context; }
         $resource = $this->modx->getObject('modResource', $criteria);
         if(!empty($resource) && is_object($resource)) {
